fix: 设置卡片中front的z-index为-1修复safari翻转时会显示闪烁前置卡片情况

--- a/src/components/PersonCard/PersonCard.scss
+++ b/src/components/PersonCard/PersonCard.scss
@@ -38,6 +38,7 @@
 .person-card-front {
     height: unset;
     width: unset;
+    z-index: -1;
 }
 
 .person-card-back {
